@@ -2,4 +2,5 @@
 
 cd "$(dirname "$0")/.."
 
-mvn clean install
+export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=256m"
+mvn clean install || exit 1
